# CoDes

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: dev.mjs  tauri.mjs
services/signaling/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/signaling/src/: server.test.ts  server.ts
src/: App.css  App.tsx  main.tsx  store.test.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  main.rs
src/components/: AppDialogHost.tsx  BrowserWorkspace.tsx  HandoffDialog.tsx  Icon.tsx  OverlayHub.tsx  ProjectManagerDialog.tsx  ProviderIcon.tsx  SessionContextMenu.tsx  TerminalPane.tsx  TimelineEventIcon.test.tsx  TimelineEventIcon.tsx  WorkspaceHub.tsx
src/lib/: dialogs.test.ts  dialogs.ts  handoff.test.ts  handoff.ts  native.ts  nativeBrowser.ts  persistence.ts  providers.ts  sessionRuntime.ts  taskAutomation.ts  workspaceIcon.test.ts  workspaceIcon.ts
src/sharing/: client.test.ts  client.ts  protocol.test.ts  protocol.ts
